--- a/css/style.css
+++ b/css/style.css
@@ -1,2 +1,17 @@
 /* This is my CSS File*/
-#map { height: 250px; }
+#map {
+    height: 400px;
+    width: 80%;
+    display: inline-block;
+}
+
+#panel {
+    width: 16%;
+    padding: 20px;
+    display: inline-block;
+    vertical-align: top;
+}
+
+.leaflet-popup-content p {
+    margin: 0.2em 0;
+}
