--- a/css/style.css
+++ b/css/style.css
@@ -1,2 +1,30 @@
-/* This is my CSS File*/
-#map { height: 250px; }
+#map {
+    height: 400px;
+    width: 70%;
+    display: inline-block;
+}
+
+#panel {
+    width: 23%;
+    padding: 20px;
+    display: inline-block;
+    vertical-align: top;
+    text-align: center;
+    line-height: 42px;
+}
+
+.range-slider{
+	width: 50%;
+}
+
+#forward{
+	float: right;
+}
+
+#reverse{
+	float: left;
+}
+
+.leaflet-popup-content p {
+    margin: 0.2em 0;
+}
