--- a/css/style.css
+++ b/css/style.css
@@ -1,28 +1,30 @@
-<<<<<<< HEAD
 #map {
     height: 400px;
-    width: 70%;
-=======
-/* This is my CSS File*/
-#map {
-    height: 400px;
-    width: 80%;
->>>>>>> origin/master
+    width: 100%;
     display: inline-block;
 }
 
-#panel {
-<<<<<<< HEAD
+/*#panel {
     width: 23%;
     padding: 20px;
     display: inline-block;
     vertical-align: top;
     text-align: center;
     line-height: 42px;
+}*/
+
+.sequence-control-container {
+    width: 350px;
+    height: 30px;
+    background-color: rgba(255,255,255,0.8);
+    padding: 10px;
+    line-height: 45px;
+    text-align: center;
+    border: solid gray 1px;
 }
 
 .range-slider{
-	width: 50%;
+	width: 200px;
 }
 
 #forward{
@@ -31,12 +33,6 @@
 
 #reverse{
 	float: left;
-=======
-    width: 16%;
-    padding: 20px;
-    display: inline-block;
-    vertical-align: top;
->>>>>>> origin/master
 }
 
 .leaflet-popup-content p {
