--- a/css/style.css
+++ b/css/style.css
@@ -38,3 +38,16 @@
 .leaflet-popup-content p {
     margin: 0.2em 0;
 }
+
+#temporal-legend {
+    font-weight: bold;
+    font-size: 1.3em;
+}
+
+.legend-control-container {
+    width:150px;
+    height: 90px;
+    background-color: rgba(255,255,255,0.8);
+    border: solid gray 1px;  
+    text-align: center;
+}
